# display-pure-egui-texture

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
.cargo/: config.toml
src/: lib.rs  main.rs  texture.rs  ui.rs  web.rs
src/shaders/: texture-fs.glsl
web/: index.html  index.js
