[package]
name = "trypure"
version = "0.1.0"
edition = "2018"

[lib]
name = "trypure"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"
path = "src/main.rs"


[dependencies]
wasm-bindgen = "0.2.74"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glfw = "0.41.0"
luminance-glfw = "0.15.0"
