[package]
name = "trypure"
version = "0.1.0"
edition = "2018"

[lib]
name = "trypure"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"
path = "src/main.rs"

[dependencies]
luminance = "0.43.2"
luminance-front = { version = "0.3.1", features = ["webgl2"] }
luminance-derive = "0.6"
luminance-windowing = "0.9.3"
image = "0.23.14"
egui = "0.13.0"
web-sys = "0.3.51"
luminance-web-sys = "0.2.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.50"
web-sys = { version = "0.3.44", features = ["console"] }
luminance-webgl = "0.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glfw = "0.41.0"
luminance-gl = "0.16.1"
luminance-glfw = "0.15.0"
